--- a/casa/css/antonio-rivera.css
+++ b/casa/css/antonio-rivera.css
@@ -1,1 +1,496 @@
-.version.antonio_rivera{color:#00001F;background-color:#C7D7D4;}#muse_css_mq{background-color:#FFFFFF;}#page{z-index:1;min-height:500px;background-image:none;border-width:0px;border-color:#000000;background-color:transparent;width:100%;max-width:960px;margin-left:auto;margin-right:auto;}#pu95{z-index:32;height:0px;padding-bottom:108px;margin-right:-10000px;width:100%;}#u95{z-index:32;height:108px;position:fixed;top:0px;}#u95-bw{z-index:32;}#u101{position:relative;left:-50%;margin-left:67.34507042253523px;width:100%;max-width:135px;}#u8393{z-index:34;width:97.04%;}#u101-wrapper{position:fixed;top:20px;z-index:33;left:50%;margin-left:-460px;width:14.07%;max-width:135px;}#u117-4{min-height:19px;position:relative;left:-50%;margin-left:67.49999999999999px;width:100%;max-width:135px;}#u117-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:135px;margin:0px 0px 0px 67px;}#u117-4-wrapper{position:fixed;top:57px;z-index:35;left:50%;margin-left:-242px;width:14.07%;max-width:135px;}#u122-4{min-height:19px;position:relative;left:-50%;margin-left:67.49999999999997px;width:100%;max-width:135px;}#u117-4.MuseLinkActive,#u122-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:135px;margin:0px 0px 0px 67px;}#u122-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:135px;margin:0px 0px 0px 67px;}#u122-4-wrapper{position:fixed;top:57px;z-index:39;left:50%;margin-left:-83px;width:14.07%;max-width:135px;}#u125-4{min-height:19px;position:relative;left:-50%;margin-left:100px;width:100%;max-width:200px;}#u125-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:200px;margin:0px 0px 0px 100px;}#u125-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:200px;margin:0px 0px 0px 100px;}#u125-4-wrapper{position:fixed;top:57px;z-index:43;left:50%;margin-left:77px;width:20.84%;max-width:200px;}#u128-4{min-height:19px;position:relative;left:-50%;margin-left:32px;width:100%;max-width:64px;}#u128-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u128-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u128-4-wrapper{position:fixed;top:57px;z-index:47;left:50%;margin-left:295px;width:6.67%;max-width:64px;}#u6397-4{min-height:14px;position:relative;left:-50%;margin-left:32px;width:100%;max-width:64px;}#u6397-4:hover{padding-top:0px;padding-bottom:0px;min-height:14px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u6397-4-wrapper{position:fixed;top:20px;z-index:51;left:50%;margin-left:295px;width:6.67%;max-width:64px;}#u6400-4{min-height:14px;position:relative;left:-50%;margin-left:32px;width:100%;max-width:64px;}#u6397-4.MuseLinkActive,#u6400-4:hover{padding-top:0px;padding-bottom:0px;min-height:14px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u6400-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:14px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u6400-4-wrapper{position:fixed;top:20px;z-index:55;left:50%;margin-left:389px;width:6.67%;max-width:64px;}#u131-4{min-height:19px;position:relative;left:-50%;margin-left:38.5px;width:100%;max-width:77px;}#u131-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:77px;margin:0px 0px 0px 39px;}#u131-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:77px;margin:0px 0px 0px 39px;}#u131-4-wrapper{position:fixed;top:57px;z-index:59;left:50%;margin-left:382px;width:8.03%;max-width:77px;}#ppu5179{z-index:0;margin-right:-10000px;margin-top:108px;width:95.94%;margin-left:2.09%;}#pu5179{z-index:17;width:100%;}#u5179{z-index:17;background-color:#616160;position:relative;margin-right:-10000px;width:49.52%;}#u5181-4{z-index:19;min-height:41px;background-color:transparent;line-height:39px;text-align:center;color:#FFFFFF;font-family:roboto, sans-serif;font-weight:300;position:relative;margin-right:-10000px;width:100%;}#u5180{z-index:18;background-color:#616160;position:relative;margin-right:-10000px;width:49.52%;left:50.49%;}#u5179.MuseLinkActive,#u5180:hover{background-color:#E6C35A;min-height:0px;width:49.52%;margin:0px -10000px 0px 0%;}#u5182-4{z-index:23;min-height:41px;background-color:transparent;line-height:39px;text-align:center;color:#FFFFFF;font-family:roboto, sans-serif;font-weight:300;position:relative;margin-right:-10000px;width:100%;}#u5181-4.MuseLinkActive,#u5182-4:hover{padding-top:0px;padding-bottom:0px;min-height:41px;width:100%;margin:0px -10000px 0px 0%;}#u5181-4.MuseLinkActive p,#u5182-4:hover p{color:#1D1D1B;visibility:inherit;}#u2440{z-index:13;background-color:transparent;margin-top:61px;position:relative;width:20.2%;}#u2437-11{z-index:2;min-height:305px;background-color:transparent;text-align:left;color:#FFFFFF;margin-top:39px;position:relative;width:51.36%;margin-left:0.55%;}#u2437-2,#u2437-3{font-size:30px;line-height:36px;font-family:baskerville-display-pt, serif;font-weight:700;font-style:italic;}#u2437-5,#u2437-6,#u2437-8,#u2437-9{font-size:18px;line-height:22px;font-family:roboto, sans-serif;font-weight:400;}#u3829{z-index:15;background-color:transparent;-webkit-transform:matrix(0,-1,1,0,0,34);-ms-transform:matrix(0,-1,1,0,0,34);transform:matrix(0,-1,1,0,0,34);margin-top:54px;position:relative;width:3.7%;}#u2440_img,#u3829_img{width:100%;}.css_verticalspacer .verticalspacer{height:calc(100vh - 878px);}#u244{z-index:27;min-height:40px;padding-bottom:27px;}#u244_align_to_page{margin-left:auto;margin-right:auto;position:relative;}#u250-4{z-index:28;min-height:12px;position:relative;margin-right:-10000px;margin-top:28px;width:66.78%;left:2.09%;}.js body{visibility:hidden;}.js body.initialized{visibility:visible;}#u244-bw{z-index:27;min-height:40px;margin-top:-5px;}.html{background:#FFFFFF url("../images/fundacion_antonio_rivera_02_gradient.jpg?crc=279087077") no-repeat center center fixed;background-size:cover;}body{position:relative;min-width:320px;}.verticalspacer{min-height:1px;}
+.version.antonio_rivera {
+    color: #00001F;
+    background-color: #C7D7D4;
+}
+
+#muse_css_mq {
+    background-color: #FFFFFF;
+}
+
+#page {
+    z-index: 1;
+    min-height: 500px;
+    background-image: none;
+    border-width: 0px;
+    border-color: #000000;
+    background-color: transparent;
+    width: 100%;
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#pu95 {
+    z-index: 32;
+    height: 0px;
+    padding-bottom: 108px;
+    margin-right: -10000px;
+    width: 100%;
+}
+
+#u95 {
+    z-index: 32;
+    height: 108px;
+    position: fixed;
+    top: 0px;
+}
+
+#u95-bw {
+    z-index: 32;
+}
+
+#u101 {
+    position: relative;
+    left: -50%;
+    margin-left: 67.34507042253523px;
+    width: 100%;
+    max-width: 135px;
+}
+
+#u8393 {
+    z-index: 34;
+    width: 97.04%;
+}
+
+#u101-wrapper {
+    position: fixed;
+    top: 20px;
+    z-index: 33;
+    left: 50%;
+    margin-left: -460px;
+    width: 14.07%;
+    max-width: 135px;
+}
+
+#u117-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 67.49999999999999px;
+    width: 100%;
+    max-width: 135px;
+}
+
+#u117-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 135px;
+    margin: 0px 0px 0px 67px;
+}
+
+#u117-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 35;
+    left: 50%;
+    margin-left: -242px;
+    width: 14.07%;
+    max-width: 135px;
+}
+
+#u122-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 67.49999999999997px;
+    width: 100%;
+    max-width: 135px;
+}
+
+#u117-4.MuseLinkActive,
+#u122-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 135px;
+    margin: 0px 0px 0px 67px;
+}
+
+#u122-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 135px;
+    margin: 0px 0px 0px 67px;
+}
+
+#u122-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 39;
+    left: 50%;
+    margin-left: -83px;
+    width: 14.07%;
+    max-width: 135px;
+}
+
+#u125-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 100px;
+    width: 100%;
+    max-width: 200px;
+}
+
+#u125-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 200px;
+    margin: 0px 0px 0px 100px;
+}
+
+#u125-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 200px;
+    margin: 0px 0px 0px 100px;
+}
+
+#u125-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 43;
+    left: 50%;
+    margin-left: 77px;
+    width: 20.84%;
+    max-width: 200px;
+}
+
+#u128-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 32px;
+    width: 100%;
+    max-width: 64px;
+}
+
+#u128-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u128-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u128-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 47;
+    left: 50%;
+    margin-left: 295px;
+    width: 6.67%;
+    max-width: 64px;
+}
+
+#u6397-4 {
+    min-height: 14px;
+    position: relative;
+    left: -50%;
+    margin-left: 32px;
+    width: 100%;
+    max-width: 64px;
+}
+
+#u6397-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 14px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u6397-4-wrapper {
+    position: fixed;
+    top: 20px;
+    z-index: 51;
+    left: 50%;
+    margin-left: 295px;
+    width: 6.67%;
+    max-width: 64px;
+}
+
+#u6400-4 {
+    min-height: 14px;
+    position: relative;
+    left: -50%;
+    margin-left: 32px;
+    width: 100%;
+    max-width: 64px;
+}
+
+#u6397-4.MuseLinkActive,
+#u6400-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 14px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u6400-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 14px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u6400-4-wrapper {
+    position: fixed;
+    top: 20px;
+    z-index: 55;
+    left: 50%;
+    margin-left: 389px;
+    width: 6.67%;
+    max-width: 64px;
+}
+
+#u131-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 38.5px;
+    width: 100%;
+    max-width: 77px;
+}
+
+#u131-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 77px;
+    margin: 0px 0px 0px 39px;
+}
+
+#u131-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 77px;
+    margin: 0px 0px 0px 39px;
+}
+
+#u131-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 59;
+    left: 50%;
+    margin-left: 382px;
+    width: 8.03%;
+    max-width: 77px;
+}
+
+#ppu5179 {
+    z-index: 0;
+    margin-right: -10000px;
+    margin-top: 108px;
+    width: 95.94%;
+    margin-left: 2.09%;
+}
+
+#pu5179 {
+    z-index: 17;
+    width: 100%;
+}
+
+#u5179 {
+    z-index: 17;
+    background-color: #616160;
+    position: relative;
+    margin-right: -10000px;
+    width: 49.52%;
+}
+
+#u5181-4 {
+    z-index: 19;
+    min-height: 41px;
+    background-color: transparent;
+    line-height: 39px;
+    text-align: center;
+    color: #FFFFFF;
+    font-family: roboto, sans-serif;
+    font-weight: 300;
+    position: relative;
+    margin-right: -10000px;
+    width: 100%;
+}
+
+#u5180 {
+    z-index: 18;
+    background-color: #616160;
+    position: relative;
+    margin-right: -10000px;
+    width: 49.52%;
+    left: 50.49%;
+}
+
+#u5179.MuseLinkActive,
+#u5180:hover {
+    background-color: #E6C35A;
+    min-height: 0px;
+    width: 49.52%;
+    margin: 0px -10000px 0px 0%;
+}
+
+#u5182-4 {
+    z-index: 23;
+    min-height: 41px;
+    background-color: transparent;
+    line-height: 39px;
+    text-align: center;
+    color: #FFFFFF;
+    font-family: roboto, sans-serif;
+    font-weight: 300;
+    position: relative;
+    margin-right: -10000px;
+    width: 100%;
+}
+
+#u5181-4.MuseLinkActive,
+#u5182-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 41px;
+    width: 100%;
+    margin: 0px -10000px 0px 0%;
+}
+
+#u5181-4.MuseLinkActive p,
+#u5182-4:hover p {
+    color: #1D1D1B;
+    visibility: inherit;
+}
+
+#u2440 {
+    z-index: 13;
+    background-color: transparent;
+    margin-top: 61px;
+    position: relative;
+    width: 20.2%;
+}
+
+#u2437-11 {
+    z-index: 2;
+    min-height: 305px;
+    background-color: transparent;
+    text-align: left;
+    color: #FFFFFF;
+    margin-top: 39px;
+    position: relative;
+    width: 51.36%;
+    margin-left: 0.55%;
+}
+
+#u2437-2,
+#u2437-3 {
+    font-size: 30px;
+    line-height: 36px;
+    font-family: baskerville-display-pt, serif;
+    font-weight: 700;
+    font-style: italic;
+}
+
+#u2437-5,
+#u2437-6,
+#u2437-8,
+#u2437-9 {
+    font-size: 18px;
+    line-height: 22px;
+    font-family: roboto, sans-serif;
+    font-weight: 400;
+}
+
+#u3829 {
+    z-index: 15;
+    background-color: transparent;
+    -webkit-transform: matrix(0, -1, 1, 0, 0, 34);
+    -ms-transform: matrix(0, -1, 1, 0, 0, 34);
+    transform: matrix(0, -1, 1, 0, 0, 34);
+    margin-top: 54px;
+    position: relative;
+    width: 3.7%;
+}
+
+#u2440_img,
+#u3829_img {
+    width: 100%;
+}
+
+.css_verticalspacer .verticalspacer {
+    height: calc(100vh - 878px);
+}
+
+#u244 {
+    z-index: 27;
+    min-height: 40px;
+    padding-bottom: 27px;
+}
+
+#u244_align_to_page {
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+}
+
+#u250-4 {
+    z-index: 28;
+    min-height: 12px;
+    position: relative;
+    margin-right: -10000px;
+    margin-top: 28px;
+    width: 66.78%;
+    left: 2.09%;
+}
+
+.js body {
+    visibility: hidden;
+}
+
+.js body.initialized {
+    visibility: visible;
+}
+
+#u244-bw {
+    z-index: 27;
+    min-height: 40px;
+    margin-top: -5px;
+}
+
+.html {
+    background: #FFFFFF url("../images/fundacion_antonio_rivera_02_gradient.jpg?crc=279087077") no-repeat center center fixed;
+    background-size: cover;
+}
+
+body {
+    position: relative;
+    min-width: 320px;
+}
+
+.verticalspacer {
+    min-height: 1px;
+}
