--- a/casa/css/master_a-master.css
+++ b/casa/css/master_a-master.css
@@ -1,1 +1,140 @@
-#u101{background-color:transparent;}#u8393{display:block;}#u117-4{background-color:transparent;text-align:center;font-size:14px;color:#1D1D1B;font-family:roboto, sans-serif;font-weight:300;}#u117-4:hover p{color:#E6C35A;visibility:inherit;}#u122-4{background-color:transparent;text-align:center;font-size:14px;color:#1D1D1B;font-family:roboto, sans-serif;font-weight:300;}#u122-4:hover p{color:#E6C35A;visibility:inherit;}#u125-4{background-color:transparent;text-transform:uppercase;text-align:center;font-size:14px;color:#1D1D1B;font-family:roboto, sans-serif;font-weight:300;}#u125-4:hover p{color:#E6C35A;visibility:inherit;}#u128-4{background-color:transparent;text-align:center;font-size:14px;color:#1D1D1B;font-family:roboto, sans-serif;font-weight:300;}#u128-4:hover p{color:#E6C35A;visibility:inherit;}#u6397-4{background-color:transparent;line-height:16px;text-align:center;font-size:13px;color:#1D1D1B;font-family:roboto, sans-serif;font-weight:300;}#u6397-4:hover p{color:#E6C35A;visibility:inherit;}#u6400-4{background-color:transparent;line-height:16px;text-align:center;font-size:13px;color:#1D1D1B;font-family:roboto, sans-serif;font-weight:300;}#u6400-4:hover p{color:#E6C35A;visibility:inherit;}#u131-4{background-color:transparent;text-align:center;font-size:14px;color:#1D1D1B;font-family:roboto, sans-serif;font-weight:300;}#u131-4:hover p{color:#E6C35A;visibility:inherit;}#u117-4.MuseLinkActive p,#u122-4.MuseLinkActive p,#u125-4.MuseLinkActive p,#u128-4.MuseLinkActive p,#u6397-4.MuseLinkActive p,#u6400-4.MuseLinkActive p,#u131-4.MuseLinkActive p{color:#1D1D1B;visibility:inherit;font-family:roboto, sans-serif;font-weight:700;font-style:normal;}#u95,#u244{background-color:#FFFFFF;}#u244_align_to_page{max-width:960px;}#u250-4{background-color:transparent;line-height:12px;font-size:10px;color:#1D1D1B;font-family:roboto, sans-serif;font-weight:300;}
+#u101 {
+    background-color: transparent;
+}
+
+#u8393 {
+    display: block;
+}
+
+#u117-4 {
+    background-color: transparent;
+    text-align: center;
+    font-size: 14px;
+    color: #1D1D1B;
+    font-family: roboto, sans-serif;
+    font-weight: 300;
+}
+
+#u117-4:hover p {
+    color: #E6C35A;
+    visibility: inherit;
+}
+
+#u122-4 {
+    background-color: transparent;
+    text-align: center;
+    font-size: 14px;
+    color: #1D1D1B;
+    font-family: roboto, sans-serif;
+    font-weight: 300;
+}
+
+#u122-4:hover p {
+    color: #E6C35A;
+    visibility: inherit;
+}
+
+#u125-4 {
+    background-color: transparent;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 14px;
+    color: #1D1D1B;
+    font-family: roboto, sans-serif;
+    font-weight: 300;
+}
+
+#u125-4:hover p {
+    color: #E6C35A;
+    visibility: inherit;
+}
+
+#u128-4 {
+    background-color: transparent;
+    text-align: center;
+    font-size: 14px;
+    color: #1D1D1B;
+    font-family: roboto, sans-serif;
+    font-weight: 300;
+}
+
+#u128-4:hover p {
+    color: #E6C35A;
+    visibility: inherit;
+}
+
+#u6397-4 {
+    background-color: transparent;
+    line-height: 16px;
+    text-align: center;
+    font-size: 13px;
+    color: #1D1D1B;
+    font-family: roboto, sans-serif;
+    font-weight: 300;
+}
+
+#u6397-4:hover p {
+    color: #E6C35A;
+    visibility: inherit;
+}
+
+#u6400-4 {
+    background-color: transparent;
+    line-height: 16px;
+    text-align: center;
+    font-size: 13px;
+    color: #1D1D1B;
+    font-family: roboto, sans-serif;
+    font-weight: 300;
+}
+
+#u6400-4:hover p {
+    color: #E6C35A;
+    visibility: inherit;
+}
+
+#u131-4 {
+    background-color: transparent;
+    text-align: center;
+    font-size: 14px;
+    color: #1D1D1B;
+    font-family: roboto, sans-serif;
+    font-weight: 300;
+}
+
+#u131-4:hover p {
+    color: #E6C35A;
+    visibility: inherit;
+}
+
+#u117-4.MuseLinkActive p,
+#u122-4.MuseLinkActive p,
+#u125-4.MuseLinkActive p,
+#u128-4.MuseLinkActive p,
+#u6397-4.MuseLinkActive p,
+#u6400-4.MuseLinkActive p,
+#u131-4.MuseLinkActive p {
+    color: #1D1D1B;
+    visibility: inherit;
+    font-family: roboto, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+#u95,
+#u244 {
+    background-color: #FFFFFF;
+}
+
+#u244_align_to_page {
+    max-width: 960px;
+}
+
+#u250-4 {
+    background-color: transparent;
+    line-height: 12px;
+    font-size: 10px;
+    color: #1D1D1B;
+    font-family: roboto, sans-serif;
+    font-weight: 300;
+}
