--- a/casa/css/responsabilidad-social.css
+++ b/casa/css/responsabilidad-social.css
@@ -1,1 +1,556 @@
-.version.responsabilidad_social{color:#0000E0;background-color:#7D3607;}#muse_css_mq{background-color:#FFFFFF;}#page{z-index:1;min-height:500px;background-image:none;border-width:0px;border-color:#000000;background-color:transparent;width:100%;max-width:960px;margin-left:auto;margin-right:auto;}#pu95{z-index:42;height:0px;padding-bottom:108px;margin-right:-10000px;width:100%;}#u95{z-index:42;height:108px;position:fixed;top:0px;}#u95-bw{z-index:42;}#u101{position:relative;left:-50%;margin-left:67.34507042253523px;width:100%;max-width:135px;}#u8393{z-index:44;width:97.04%;}#u101-wrapper{position:fixed;top:20px;z-index:43;left:50%;margin-left:-460px;width:14.07%;max-width:135px;}#u117-4{min-height:19px;position:relative;left:-50%;margin-left:67.49999999999999px;width:100%;max-width:135px;}#u117-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:135px;margin:0px 0px 0px 67px;}#u117-4-wrapper{position:fixed;top:57px;z-index:45;left:50%;margin-left:-242px;width:14.07%;max-width:135px;}#u122-4{min-height:19px;position:relative;left:-50%;margin-left:67.49999999999997px;width:100%;max-width:135px;}#u117-4.MuseLinkActive,#u122-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:135px;margin:0px 0px 0px 67px;}#u122-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:135px;margin:0px 0px 0px 67px;}#u122-4-wrapper{position:fixed;top:57px;z-index:49;left:50%;margin-left:-83px;width:14.07%;max-width:135px;}#u125-4{min-height:19px;position:relative;left:-50%;margin-left:100px;width:100%;max-width:200px;}#u125-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:200px;margin:0px 0px 0px 100px;}#u125-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:200px;margin:0px 0px 0px 100px;}#u125-4-wrapper{position:fixed;top:57px;z-index:53;left:50%;margin-left:77px;width:20.84%;max-width:200px;}#u128-4{min-height:19px;position:relative;left:-50%;margin-left:32px;width:100%;max-width:64px;}#u128-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u128-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u128-4-wrapper{position:fixed;top:57px;z-index:57;left:50%;margin-left:295px;width:6.67%;max-width:64px;}#u6397-4{min-height:14px;position:relative;left:-50%;margin-left:32px;width:100%;max-width:64px;}#u6397-4:hover{padding-top:0px;padding-bottom:0px;min-height:14px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u6397-4-wrapper{position:fixed;top:20px;z-index:61;left:50%;margin-left:295px;width:6.67%;max-width:64px;}#u6400-4{min-height:14px;position:relative;left:-50%;margin-left:32px;width:100%;max-width:64px;}#u6397-4.MuseLinkActive,#u6400-4:hover{padding-top:0px;padding-bottom:0px;min-height:14px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u6400-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:14px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u6400-4-wrapper{position:fixed;top:20px;z-index:65;left:50%;margin-left:389px;width:6.67%;max-width:64px;}#u131-4{min-height:19px;position:relative;left:-50%;margin-left:38.5px;width:100%;max-width:77px;}#u131-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:77px;margin:0px 0px 0px 39px;}#u131-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:77px;margin:0px 0px 0px 39px;}#u131-4-wrapper{position:fixed;top:57px;z-index:69;left:50%;margin-left:382px;width:8.03%;max-width:77px;}#ppu2176{z-index:0;margin-right:-10000px;margin-top:108px;width:97.92%;margin-left:2.09%;}#pu2176{z-index:2;width:97.98%;}#u2176{z-index:2;background-color:#616160;position:relative;margin-right:-10000px;width:49.52%;}#u2178-4{z-index:4;min-height:41px;background-color:transparent;line-height:39px;text-align:center;color:#FFFFFF;font-family:roboto, sans-serif;font-weight:300;position:relative;margin-right:-10000px;width:100%;}#u3778{z-index:3;background-color:#616160;position:relative;margin-right:-10000px;width:49.52%;left:50.49%;}#u2176:hover,#u3778:hover{background-color:#E6C35A;min-height:0px;width:49.52%;margin:0px -10000px 0px 0%;}#u2179-4{z-index:8;min-height:41px;background-color:transparent;line-height:39px;text-align:center;color:#FFFFFF;font-family:roboto, sans-serif;font-weight:300;position:relative;margin-right:-10000px;width:100%;}#u2178-4:hover,#u2179-4:hover{padding-top:0px;padding-bottom:0px;min-height:41px;width:100%;margin:0px -10000px 0px 0%;}#u2178-4:hover p,#u2179-4:hover p{color:#1D1D1B;visibility:inherit;}#ppu2420-4{z-index:0;margin-top:98px;width:100%;}#pu2420-4{z-index:12;padding-bottom:0px;margin-right:-10000px;margin-top:15px;width:38.62%;}#u2420-4{z-index:12;min-height:118px;background-color:transparent;line-height:36px;text-align:left;color:#616160;font-size:30px;font-family:baskerville-display-pt, serif;font-weight:700;font-style:italic;position:relative;width:100%;}#u2423-13{z-index:16;min-height:372px;background-color:transparent;line-height:24px;text-align:left;color:#616160;font-size:20px;font-family:baskerville-display-pt, serif;font-weight:400;font-style:italic;margin-top:33px;position:relative;width:94.5%;}#u3114{z-index:29;opacity:1;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";filter:alpha(opacity=100);position:relative;margin-right:-10000px;width:26.49%;left:43.94%;background:transparent url("../images/fundacion_antonio_rivera.jpg?crc=83856351") no-repeat center center;background-size:cover;}#u3116{z-index:31;background-color:#7F7F7F;background-color:rgba(0,0,0,0.5);padding-bottom:214px;position:relative;margin-right:-10000px;width:100%;-pie-background:rgba(0,0,0,0.5);}#u3118{z-index:33;background-color:transparent;position:relative;margin-right:-10000px;margin-top:172px;width:57.43%;left:17.27%;}#u3115{z-index:30;opacity:1;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";filter:alpha(opacity=100);position:relative;margin-right:-10000px;width:28.52%;left:71.49%;background:transparent url("../images/fundacion_agave.jpg?crc=3762730946") no-repeat center center;}#u3117{z-index:32;background-color:#7F7F7F;background-color:rgba(0,0,0,0.5);padding-bottom:241px;position:relative;margin-right:-10000px;width:100%;-pie-background:rgba(0,0,0,0.5);}#u3120{z-index:35;background-color:transparent;position:relative;margin-right:-10000px;margin-top:212px;width:77.99%;left:10.83%;}#u3118_img,#u3120_img{width:100%;}.css_verticalspacer .verticalspacer{height:calc(100vh - 846px);}#u244{z-index:37;min-height:40px;padding-bottom:27px;}#u244_align_to_page{margin-left:auto;margin-right:auto;position:relative;}#u250-4{z-index:38;min-height:12px;position:relative;margin-right:-10000px;margin-top:28px;width:66.78%;left:2.09%;}.js body{visibility:hidden;}.js body.initialized{visibility:visible;}#u244-bw{z-index:37;min-height:40px;margin-top:-5px;}.html{background-color:#F7EFD8;}body{position:relative;min-width:320px;}.verticalspacer{min-height:1px;}
+.version.responsabilidad_social {
+    color: #0000E0;
+    background-color: #7D3607;
+}
+
+#muse_css_mq {
+    background-color: #FFFFFF;
+}
+
+#page {
+    z-index: 1;
+    min-height: 500px;
+    background-image: none;
+    border-width: 0px;
+    border-color: #000000;
+    background-color: transparent;
+    width: 100%;
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#pu95 {
+    z-index: 42;
+    height: 0px;
+    padding-bottom: 108px;
+    margin-right: -10000px;
+    width: 100%;
+}
+
+#u95 {
+    z-index: 42;
+    height: 108px;
+    position: fixed;
+    top: 0px;
+}
+
+#u95-bw {
+    z-index: 42;
+}
+
+#u101 {
+    position: relative;
+    left: -50%;
+    margin-left: 67.34507042253523px;
+    width: 100%;
+    max-width: 135px;
+}
+
+#u8393 {
+    z-index: 44;
+    width: 97.04%;
+}
+
+#u101-wrapper {
+    position: fixed;
+    top: 20px;
+    z-index: 43;
+    left: 50%;
+    margin-left: -460px;
+    width: 14.07%;
+    max-width: 135px;
+}
+
+#u117-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 67.49999999999999px;
+    width: 100%;
+    max-width: 135px;
+}
+
+#u117-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 135px;
+    margin: 0px 0px 0px 67px;
+}
+
+#u117-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 45;
+    left: 50%;
+    margin-left: -242px;
+    width: 14.07%;
+    max-width: 135px;
+}
+
+#u122-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 67.49999999999997px;
+    width: 100%;
+    max-width: 135px;
+}
+
+#u117-4.MuseLinkActive,
+#u122-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 135px;
+    margin: 0px 0px 0px 67px;
+}
+
+#u122-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 135px;
+    margin: 0px 0px 0px 67px;
+}
+
+#u122-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 49;
+    left: 50%;
+    margin-left: -83px;
+    width: 14.07%;
+    max-width: 135px;
+}
+
+#u125-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 100px;
+    width: 100%;
+    max-width: 200px;
+}
+
+#u125-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 200px;
+    margin: 0px 0px 0px 100px;
+}
+
+#u125-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 200px;
+    margin: 0px 0px 0px 100px;
+}
+
+#u125-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 53;
+    left: 50%;
+    margin-left: 77px;
+    width: 20.84%;
+    max-width: 200px;
+}
+
+#u128-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 32px;
+    width: 100%;
+    max-width: 64px;
+}
+
+#u128-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u128-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u128-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 57;
+    left: 50%;
+    margin-left: 295px;
+    width: 6.67%;
+    max-width: 64px;
+}
+
+#u6397-4 {
+    min-height: 14px;
+    position: relative;
+    left: -50%;
+    margin-left: 32px;
+    width: 100%;
+    max-width: 64px;
+}
+
+#u6397-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 14px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u6397-4-wrapper {
+    position: fixed;
+    top: 20px;
+    z-index: 61;
+    left: 50%;
+    margin-left: 295px;
+    width: 6.67%;
+    max-width: 64px;
+}
+
+#u6400-4 {
+    min-height: 14px;
+    position: relative;
+    left: -50%;
+    margin-left: 32px;
+    width: 100%;
+    max-width: 64px;
+}
+
+#u6397-4.MuseLinkActive,
+#u6400-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 14px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u6400-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 14px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u6400-4-wrapper {
+    position: fixed;
+    top: 20px;
+    z-index: 65;
+    left: 50%;
+    margin-left: 389px;
+    width: 6.67%;
+    max-width: 64px;
+}
+
+#u131-4 {
+    min-height: 19px;
+    position: relative;
+    left: -110%;
+    width: 100%;
+    max-width: 77px;
+}
+
+#u131-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 77px;
+    margin: 0px 0px 0px 39px;
+}
+
+#u131-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 77px;
+    margin: 0px 0px 0px 39px;
+}
+
+#u131-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 69;
+    left: 50%;
+    margin-left: 382px;
+    width: 8.03%;
+    max-width: 77px;
+}
+
+#ppu2176 {
+    z-index: 0;
+    margin-right: -10000px;
+    margin-top: 108px;
+    width: 97.92%;
+    margin-left: 2.09%;
+}
+
+#pu2176 {
+    z-index: 2;
+    width: 97.98%;
+}
+
+#u2176 {
+    z-index: 2;
+    background-color: #616160;
+    position: relative;
+    margin-right: -10000px;
+    width: 49.52%;
+}
+
+#u2178-4 {
+    z-index: 4;
+    min-height: 41px;
+    background-color: transparent;
+    line-height: 39px;
+    text-align: center;
+    color: #FFFFFF;
+    font-family: roboto, sans-serif;
+    font-weight: 300;
+    position: relative;
+    margin-right: -10000px;
+    width: 100%;
+}
+
+#u3778 {
+    z-index: 3;
+    background-color: #616160;
+    position: relative;
+    margin-right: -10000px;
+    width: 49.52%;
+    left: 50.49%;
+}
+
+#u2176:hover,
+#u3778:hover {
+    background-color: #E6C35A;
+    min-height: 0px;
+    width: 49.52%;
+    margin: 0px -10000px 0px 0%;
+}
+
+#u2179-4 {
+    z-index: 8;
+    min-height: 41px;
+    background-color: transparent;
+    line-height: 39px;
+    text-align: center;
+    color: #FFFFFF;
+    font-family: roboto, sans-serif;
+    font-weight: 300;
+    position: relative;
+    margin-right: -10000px;
+    width: 100%;
+}
+
+#u2178-4:hover,
+#u2179-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 41px;
+    width: 100%;
+    margin: 0px -10000px 0px 0%;
+}
+
+#u2178-4:hover p,
+#u2179-4:hover p {
+    color: #1D1D1B;
+    visibility: inherit;
+}
+
+#ppu2420-4 {
+    z-index: 0;
+    margin-top: 98px;
+    width: 100%;
+}
+
+#pu2420-4 {
+    z-index: 12;
+    padding-bottom: 0px;
+    margin-right: -10000px;
+    margin-top: 15px;
+    width: 38.62%;
+}
+
+#u2420-4 {
+    z-index: 12;
+    min-height: 118px;
+    background-color: transparent;
+    line-height: 36px;
+    text-align: left;
+    color: #616160;
+    font-size: 30px;
+    font-family: baskerville-display-pt, serif;
+    font-weight: 700;
+    font-style: italic;
+    position: relative;
+    width: 100%;
+}
+
+#u2423-13 {
+    z-index: 16;
+    min-height: 372px;
+    background-color: transparent;
+    line-height: 24px;
+    text-align: left;
+    color: #616160;
+    font-size: 20px;
+    font-family: baskerville-display-pt, serif;
+    font-weight: 400;
+    font-style: italic;
+    margin-top: 33px;
+    position: relative;
+    width: 94.5%;
+}
+
+#u3114 {
+    z-index: 29;
+    opacity: 1;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=100);
+    position: relative;
+    margin-right: -10000px;
+    width: 26.49%;
+    left: 43.94%;
+    background: transparent url("../images/fundacion_antonio_rivera.jpg?crc=83856351") no-repeat center center;
+    background-size: cover;
+}
+
+#u3116 {
+    z-index: 31;
+    background-color: #7F7F7F;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding-bottom: 214px;
+    position: relative;
+    margin-right: -10000px;
+    width: 100%;
+    -pie-background: rgba(0, 0, 0, 0.5);
+}
+
+#u3118 {
+    z-index: 33;
+    background-color: transparent;
+    position: relative;
+    margin-right: -10000px;
+    margin-top: 172px;
+    width: 57.43%;
+    left: 17.27%;
+}
+
+#u3115 {
+    z-index: 30;
+    opacity: 1;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=100);
+    position: relative;
+    margin-right: -10000px;
+    width: 28.52%;
+    left: 71.49%;
+    background: transparent url("../images/fundacion_agave.jpg?crc=3762730946") no-repeat center center;
+}
+
+#u3117 {
+    z-index: 32;
+    background-color: #7F7F7F;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding-bottom: 241px;
+    position: relative;
+    margin-right: -10000px;
+    width: 100%;
+    -pie-background: rgba(0, 0, 0, 0.5);
+}
+
+#u3120 {
+    z-index: 35;
+    background-color: transparent;
+    position: relative;
+    margin-right: -10000px;
+    margin-top: 212px;
+    width: 77.99%;
+    left: 10.83%;
+}
+
+#u3118_img,
+#u3120_img {
+    width: 100%;
+}
+
+.css_verticalspacer .verticalspacer {
+    height: calc(100vh - 846px);
+}
+
+#u244 {
+    z-index: 37;
+    min-height: 40px;
+    padding-bottom: 27px;
+}
+
+#u244_align_to_page {
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+}
+
+#u250-4 {
+    z-index: 38;
+    min-height: 12px;
+    position: relative;
+    margin-right: -10000px;
+    margin-top: 28px;
+    width: 66.78%;
+    left: 2.09%;
+}
+
+.js body {
+    visibility: hidden;
+}
+
+.js body.initialized {
+    visibility: visible;
+}
+
+#u244-bw {
+    z-index: 37;
+    min-height: 40px;
+    margin-top: -5px;
+}
+
+.html {
+    background-color: #F7EFD8;
+}
+
+body {
+    position: relative;
+    min-width: 320px;
+}
+
+.verticalspacer {
+    min-height: 1px;
+}
