--- a/casa/css/social-responsability.css
+++ b/casa/css/social-responsability.css
@@ -1,1 +1,561 @@
-.version.social_responsability{color:#00001E;background-color:#60BC17;}#muse_css_mq{background-color:#FFFFFF;}#page{z-index:1;min-height:500px;background-image:none;border-width:0px;border-color:#000000;background-color:transparent;width:100%;max-width:960px;margin-left:auto;margin-right:auto;}#pu3997{z-index:39;height:0px;padding-bottom:108px;margin-right:-10000px;width:100%;}#u3997{z-index:39;height:108px;position:fixed;top:0px;}#u3997-bw{z-index:39;}#u3993{position:relative;left:-50%;margin-left:67.34507042253523px;width:100%;max-width:135px;}#u8400{z-index:41;width:97.04%;}#u3993-wrapper{position:fixed;top:20px;z-index:40;left:50%;margin-left:-460px;width:14.07%;max-width:135px;}#u3995-4{min-height:19px;position:relative;left:-50%;margin-left:67.5px;width:100%;max-width:135px;}#u3995-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:135px;margin:0px 0px 0px 68px;}#u3995-4-wrapper{position:fixed;top:57px;z-index:42;left:50%;margin-left:-228px;width:14.07%;max-width:135px;}#u3999-4{min-height:19px;position:relative;left:-50%;margin-left:67.5px;width:100%;max-width:135px;}#u3995-4.MuseLinkActive,#u3999-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:135px;margin:0px 0px 0px 68px;}#u3999-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:135px;margin:0px 0px 0px 68px;}#u3999-4-wrapper{position:fixed;top:57px;z-index:46;left:50%;margin-left:-72px;width:14.07%;max-width:135px;}#u3998-4{min-height:19px;position:relative;left:-50%;margin-left:94px;width:100%;max-width:188px;}#u3998-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:188px;margin:0px 0px 0px 94px;}#u3998-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:188px;margin:0px 0px 0px 94px;}#u3998-4-wrapper{position:fixed;top:57px;z-index:50;left:50%;margin-left:89px;width:19.59%;max-width:188px;}#u3992-4{min-height:19px;position:relative;left:-50%;margin-left:32px;width:100%;max-width:64px;}#u3992-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u3992-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u3992-4-wrapper{position:fixed;top:57px;z-index:54;left:50%;margin-left:295px;width:6.67%;max-width:64px;}#u3996-4{min-height:19px;position:relative;left:-50%;margin-left:38.5px;width:100%;max-width:77px;}#u3996-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:77px;margin:0px 0px 0px 39px;}#u3996-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:77px;margin:0px 0px 0px 39px;}#u3996-4-wrapper{position:fixed;top:57px;z-index:58;left:50%;margin-left:382px;width:8.03%;max-width:77px;}#u6403-4{min-height:14px;position:relative;left:-50%;margin-left:32px;width:100%;max-width:64px;}#u6403-4:hover{padding-top:0px;padding-bottom:0px;min-height:14px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u6403-4-wrapper{position:fixed;top:20px;z-index:62;left:50%;margin-left:295px;width:6.67%;max-width:64px;}#u6404-4{min-height:14px;position:relative;left:-50%;margin-left:32px;width:100%;max-width:64px;}#u6403-4.MuseLinkActive,#u6404-4:hover{padding-top:0px;padding-bottom:0px;min-height:14px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u6404-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:14px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u6404-4-wrapper{position:fixed;top:20px;z-index:66;left:50%;margin-left:389px;width:6.67%;max-width:64px;}#ppu5203{z-index:0;margin-right:-10000px;margin-top:108px;width:97.92%;margin-left:2.09%;}#pu5203{z-index:24;width:97.98%;}#u5203{z-index:24;background-color:#616160;position:relative;margin-right:-10000px;width:49.52%;}#u5205-4{z-index:26;min-height:41px;background-color:transparent;line-height:39px;text-align:center;color:#FFFFFF;text-transform:uppercase;font-size:14px;font-family:roboto, sans-serif;font-weight:300;position:relative;margin-right:-10000px;width:100%;}#u5204{z-index:25;background-color:#616160;position:relative;margin-right:-10000px;width:49.52%;left:50.49%;}#u5203:hover,#u5204:hover{background-color:#E6C35A;min-height:0px;width:49.52%;margin:0px -10000px 0px 0%;}#u5206-4{z-index:30;min-height:41px;background-color:transparent;line-height:39px;text-align:center;color:#FFFFFF;text-transform:uppercase;font-size:14px;font-family:roboto, sans-serif;font-weight:300;position:relative;margin-right:-10000px;width:100%;}#u5205-4:hover,#u5206-4:hover{padding-top:0px;padding-bottom:0px;min-height:41px;width:100%;margin:0px -10000px 0px 0%;}#u5205-4:hover p,#u5206-4:hover p{color:#1D1D1B;visibility:inherit;}#ppu4985-4{z-index:0;margin-top:98px;width:100%;}#pu4985-4{z-index:2;padding-bottom:0px;margin-right:-10000px;margin-top:15px;width:38.62%;}#u4985-4{z-index:2;min-height:118px;background-color:transparent;line-height:36px;text-align:left;color:#616160;font-size:30px;font-family:baskerville-display-pt, serif;font-weight:700;font-style:italic;position:relative;width:100%;}#u4975-10{z-index:6;min-height:372px;background-color:transparent;line-height:24px;text-align:left;color:#616160;font-size:20px;font-family:baskerville-display-pt, serif;font-weight:400;font-style:italic;margin-top:33px;position:relative;width:94.5%;}#u4984{z-index:16;opacity:1;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";filter:alpha(opacity=100);position:relative;margin-right:-10000px;width:26.49%;left:43.94%;background:transparent url("../images/fundacion_antonio_rivera.jpg?crc=83856351") no-repeat center center;background-size:cover;}#u4979{z-index:18;background-color:#7F7F7F;background-color:rgba(0,0,0,0.5);padding-bottom:214px;position:relative;margin-right:-10000px;width:100%;-pie-background:rgba(0,0,0,0.5);}#u4971{z-index:20;background-color:transparent;position:relative;margin-right:-10000px;margin-top:172px;width:57.43%;left:17.27%;}#u4974{z-index:17;opacity:1;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";filter:alpha(opacity=100);position:relative;margin-right:-10000px;width:28.52%;left:71.49%;background:transparent url("../images/fundacion_agave.jpg?crc=3762730946") no-repeat center center;}#u4981{z-index:19;background-color:#7F7F7F;background-color:rgba(0,0,0,0.5);padding-bottom:241px;position:relative;margin-right:-10000px;width:100%;-pie-background:rgba(0,0,0,0.5);}#u4976{z-index:22;background-color:transparent;position:relative;margin-right:-10000px;margin-top:212px;width:77.99%;left:10.83%;}#u4971_img,#u4976_img{width:100%;}.css_verticalspacer .verticalspacer{height:calc(100vh - 846px);}#u5444{z-index:34;min-height:40px;padding-bottom:27px;}#u5444_align_to_page{margin-left:auto;margin-right:auto;position:relative;}#u3961-4{z-index:35;min-height:12px;position:relative;margin-right:-10000px;margin-top:28px;width:66.78%;left:2.09%;}.js body{visibility:hidden;}.js body.initialized{visibility:visible;}#u5444-bw{z-index:34;min-height:40px;margin-top:-5px;}.html{background-color:#F7EFD8;}body{position:relative;min-width:320px;}.verticalspacer{min-height:1px;}
+.version.social_responsability {
+    color: #00001E;
+    background-color: #60BC17;
+}
+
+#muse_css_mq {
+    background-color: #FFFFFF;
+}
+
+#page {
+    z-index: 1;
+    min-height: 500px;
+    background-image: none;
+    border-width: 0px;
+    border-color: #000000;
+    background-color: transparent;
+    width: 100%;
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#pu3997 {
+    z-index: 39;
+    height: 0px;
+    padding-bottom: 108px;
+    margin-right: -10000px;
+    width: 100%;
+}
+
+#u3997 {
+    z-index: 39;
+    height: 108px;
+    position: fixed;
+    top: 0px;
+}
+
+#u3997-bw {
+    z-index: 39;
+}
+
+#u3993 {
+    position: relative;
+    left: -50%;
+    margin-left: 67.34507042253523px;
+    width: 100%;
+    max-width: 135px;
+}
+
+#u8400 {
+    z-index: 41;
+    width: 97.04%;
+}
+
+#u3993-wrapper {
+    position: fixed;
+    top: 20px;
+    z-index: 40;
+    left: 50%;
+    margin-left: -460px;
+    width: 14.07%;
+    max-width: 135px;
+}
+
+#u3995-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 67.5px;
+    width: 100%;
+    max-width: 135px;
+}
+
+#u3995-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 135px;
+    margin: 0px 0px 0px 68px;
+}
+
+#u3995-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 42;
+    left: 50%;
+    margin-left: -228px;
+    width: 14.07%;
+    max-width: 135px;
+}
+
+#u3999-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 67.5px;
+    width: 100%;
+    max-width: 135px;
+}
+
+#u3995-4.MuseLinkActive,
+#u3999-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 135px;
+    margin: 0px 0px 0px 68px;
+}
+
+#u3999-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 135px;
+    margin: 0px 0px 0px 68px;
+}
+
+#u3999-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 46;
+    left: 50%;
+    margin-left: -72px;
+    width: 14.07%;
+    max-width: 135px;
+}
+
+#u3998-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 94px;
+    width: 100%;
+    max-width: 188px;
+}
+
+#u3998-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 188px;
+    margin: 0px 0px 0px 94px;
+}
+
+#u3998-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 188px;
+    margin: 0px 0px 0px 94px;
+}
+
+#u3998-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 50;
+    left: 50%;
+    margin-left: 89px;
+    width: 19.59%;
+    max-width: 188px;
+}
+
+#u3992-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 32px;
+    width: 100%;
+    max-width: 64px;
+}
+
+#u3992-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u3992-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u3992-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 54;
+    left: 50%;
+    margin-left: 295px;
+    width: 6.67%;
+    max-width: 64px;
+}
+
+#u3996-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 38.5px;
+    width: 100%;
+    max-width: 77px;
+}
+
+#u3996-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 77px;
+    margin: 0px 0px 0px 39px;
+}
+
+#u3996-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 77px;
+    margin: 0px 0px 0px 39px;
+}
+
+#u3996-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 58;
+    left: 50%;
+    margin-left: 382px;
+    width: 8.03%;
+    max-width: 77px;
+}
+
+#u6403-4 {
+    min-height: 14px;
+    position: relative;
+    left: -50%;
+    margin-left: 32px;
+    width: 100%;
+    max-width: 64px;
+}
+
+#u6403-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 14px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u6403-4-wrapper {
+    position: fixed;
+    top: 20px;
+    z-index: 62;
+    left: 50%;
+    margin-left: 295px;
+    width: 6.67%;
+    max-width: 64px;
+}
+
+#u6404-4 {
+    min-height: 14px;
+    position: relative;
+    left: -50%;
+    margin-left: 32px;
+    width: 100%;
+    max-width: 64px;
+}
+
+#u6403-4.MuseLinkActive,
+#u6404-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 14px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u6404-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 14px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u6404-4-wrapper {
+    position: fixed;
+    top: 20px;
+    z-index: 66;
+    left: 50%;
+    margin-left: 389px;
+    width: 6.67%;
+    max-width: 64px;
+}
+
+#ppu5203 {
+    z-index: 0;
+    margin-right: -10000px;
+    margin-top: 108px;
+    width: 97.92%;
+    margin-left: 2.09%;
+}
+
+#pu5203 {
+    z-index: 24;
+    width: 97.98%;
+}
+
+#u5203 {
+    z-index: 24;
+    background-color: #616160;
+    position: relative;
+    margin-right: -10000px;
+    width: 49.52%;
+}
+
+#u5205-4 {
+    z-index: 26;
+    min-height: 41px;
+    background-color: transparent;
+    line-height: 39px;
+    text-align: center;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-family: roboto, sans-serif;
+    font-weight: 300;
+    position: relative;
+    margin-right: -10000px;
+    width: 100%;
+}
+
+#u5204 {
+    z-index: 25;
+    background-color: #616160;
+    position: relative;
+    margin-right: -10000px;
+    width: 49.52%;
+    left: 50.49%;
+}
+
+#u5203:hover,
+#u5204:hover {
+    background-color: #E6C35A;
+    min-height: 0px;
+    width: 49.52%;
+    margin: 0px -10000px 0px 0%;
+}
+
+#u5206-4 {
+    z-index: 30;
+    min-height: 41px;
+    background-color: transparent;
+    line-height: 39px;
+    text-align: center;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-family: roboto, sans-serif;
+    font-weight: 300;
+    position: relative;
+    margin-right: -10000px;
+    width: 100%;
+}
+
+#u5205-4:hover,
+#u5206-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 41px;
+    width: 100%;
+    margin: 0px -10000px 0px 0%;
+}
+
+#u5205-4:hover p,
+#u5206-4:hover p {
+    color: #1D1D1B;
+    visibility: inherit;
+}
+
+#ppu4985-4 {
+    z-index: 0;
+    margin-top: 98px;
+    width: 100%;
+}
+
+#pu4985-4 {
+    z-index: 2;
+    padding-bottom: 0px;
+    margin-right: -10000px;
+    margin-top: 15px;
+    width: 38.62%;
+}
+
+#u4985-4 {
+    z-index: 2;
+    min-height: 118px;
+    background-color: transparent;
+    line-height: 36px;
+    text-align: left;
+    color: #616160;
+    font-size: 30px;
+    font-family: baskerville-display-pt, serif;
+    font-weight: 700;
+    font-style: italic;
+    position: relative;
+    width: 100%;
+}
+
+#u4975-10 {
+    z-index: 6;
+    min-height: 372px;
+    background-color: transparent;
+    line-height: 24px;
+    text-align: left;
+    color: #616160;
+    font-size: 20px;
+    font-family: baskerville-display-pt, serif;
+    font-weight: 400;
+    font-style: italic;
+    margin-top: 33px;
+    position: relative;
+    width: 94.5%;
+}
+
+#u4984 {
+    z-index: 16;
+    opacity: 1;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=100);
+    position: relative;
+    margin-right: -10000px;
+    width: 26.49%;
+    left: 43.94%;
+    background: transparent url("../images/fundacion_antonio_rivera.jpg?crc=83856351") no-repeat center center;
+    background-size: cover;
+}
+
+#u4979 {
+    z-index: 18;
+    background-color: #7F7F7F;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding-bottom: 214px;
+    position: relative;
+    margin-right: -10000px;
+    width: 100%;
+    -pie-background: rgba(0, 0, 0, 0.5);
+}
+
+#u4971 {
+    z-index: 20;
+    background-color: transparent;
+    position: relative;
+    margin-right: -10000px;
+    margin-top: 172px;
+    width: 57.43%;
+    left: 17.27%;
+}
+
+#u4974 {
+    z-index: 17;
+    opacity: 1;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=100);
+    position: relative;
+    margin-right: -10000px;
+    width: 28.52%;
+    left: 71.49%;
+    background: transparent url("../images/fundacion_agave.jpg?crc=3762730946") no-repeat center center;
+}
+
+#u4981 {
+    z-index: 19;
+    background-color: #7F7F7F;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding-bottom: 241px;
+    position: relative;
+    margin-right: -10000px;
+    width: 100%;
+    -pie-background: rgba(0, 0, 0, 0.5);
+}
+
+#u4976 {
+    z-index: 22;
+    background-color: transparent;
+    position: relative;
+    margin-right: -10000px;
+    margin-top: 212px;
+    width: 77.99%;
+    left: 10.83%;
+}
+
+#u4971_img,
+#u4976_img {
+    width: 100%;
+}
+
+.css_verticalspacer .verticalspacer {
+    height: calc(100vh - 846px);
+}
+
+#u5444 {
+    z-index: 34;
+    min-height: 40px;
+    padding-bottom: 27px;
+}
+
+#u5444_align_to_page {
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+}
+
+#u3961-4 {
+    z-index: 35;
+    min-height: 12px;
+    position: relative;
+    margin-right: -10000px;
+    margin-top: 28px;
+    width: 66.78%;
+    left: 2.09%;
+}
+
+.js body {
+    visibility: hidden;
+}
+
+.js body.initialized {
+    visibility: visible;
+}
+
+#u5444-bw {
+    z-index: 34;
+    min-height: 40px;
+    margin-top: -5px;
+}
+
+.html {
+    background-color: #F7EFD8;
+}
+
+body {
+    position: relative;
+    min-width: 320px;
+}
+
+.verticalspacer {
+    min-height: 1px;
+}
