--- a/casa/css/don-antonio-rivera-venegas-foundation.css
+++ b/casa/css/don-antonio-rivera-venegas-foundation.css
@@ -1,1 +1,499 @@
-.version.don_antonio_rivera_venegas_foundation{color:#000013;background-color:#5A4067;}#muse_css_mq{background-color:#FFFFFF;}#page{z-index:1;min-height:500px;background-image:none;border-width:0px;border-color:#000000;background-color:transparent;width:100%;max-width:960px;margin-left:auto;margin-right:auto;}#pu3997{z-index:31;height:0px;padding-bottom:108px;margin-right:-10000px;width:100%;}#u3997{z-index:31;height:108px;position:fixed;top:0px;}#u3997-bw{z-index:31;}#u3993{position:relative;left:-50%;margin-left:67.34507042253523px;width:100%;max-width:135px;}#u8400{z-index:33;width:97.04%;}#u3993-wrapper{position:fixed;top:20px;z-index:32;left:50%;margin-left:-460px;width:14.07%;max-width:135px;}#u3995-4{min-height:19px;position:relative;left:-50%;margin-left:67.5px;width:100%;max-width:135px;}#u3995-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:135px;margin:0px 0px 0px 68px;}#u3995-4-wrapper{position:fixed;top:57px;z-index:34;left:50%;margin-left:-228px;width:14.07%;max-width:135px;}#u3999-4{min-height:19px;position:relative;left:-50%;margin-left:67.5px;width:100%;max-width:135px;}#u3995-4.MuseLinkActive,#u3999-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:135px;margin:0px 0px 0px 68px;}#u3999-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:135px;margin:0px 0px 0px 68px;}#u3999-4-wrapper{position:fixed;top:57px;z-index:38;left:50%;margin-left:-72px;width:14.07%;max-width:135px;}#u3998-4{min-height:19px;position:relative;left:-50%;margin-left:94px;width:100%;max-width:188px;}#u3998-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:188px;margin:0px 0px 0px 94px;}#u3998-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:188px;margin:0px 0px 0px 94px;}#u3998-4-wrapper{position:fixed;top:57px;z-index:42;left:50%;margin-left:89px;width:19.59%;max-width:188px;}#u3992-4{min-height:19px;position:relative;left:-50%;margin-left:32px;width:100%;max-width:64px;}#u3992-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u3992-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u3992-4-wrapper{position:fixed;top:57px;z-index:46;left:50%;margin-left:295px;width:6.67%;max-width:64px;}#u3996-4{min-height:19px;position:relative;left:-50%;margin-left:38.5px;width:100%;max-width:77px;}#u3996-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:77px;margin:0px 0px 0px 39px;}#u3996-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:77px;margin:0px 0px 0px 39px;}#u3996-4-wrapper{position:fixed;top:57px;z-index:50;left:50%;margin-left:382px;width:8.03%;max-width:77px;}#u6403-4{min-height:14px;position:relative;left:-50%;margin-left:32px;width:100%;max-width:64px;}#u6403-4:hover{padding-top:0px;padding-bottom:0px;min-height:14px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u6403-4-wrapper{position:fixed;top:20px;z-index:54;left:50%;margin-left:295px;width:6.67%;max-width:64px;}#u6404-4{min-height:14px;position:relative;left:-50%;margin-left:32px;width:100%;max-width:64px;}#u6403-4.MuseLinkActive,#u6404-4:hover{padding-top:0px;padding-bottom:0px;min-height:14px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u6404-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:14px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u6404-4-wrapper{position:fixed;top:20px;z-index:58;left:50%;margin-left:389px;width:6.67%;max-width:64px;}#ppu5239{z-index:0;padding-bottom:0px;margin-right:-10000px;margin-top:108px;width:95.94%;margin-left:2.09%;}#pu5239{z-index:16;width:100%;}#u5239{z-index:16;background-color:#616160;position:relative;margin-right:-10000px;width:49.52%;}#u5241-4{z-index:18;min-height:41px;background-color:transparent;line-height:39px;text-align:center;color:#FFFFFF;text-transform:uppercase;font-size:14px;font-family:roboto, sans-serif;font-weight:300;position:relative;margin-right:-10000px;width:100%;}#u5240{z-index:17;background-color:#616160;position:relative;margin-right:-10000px;width:49.52%;left:50.49%;}#u5239.MuseLinkActive,#u5240:hover{background-color:#E6C35A;min-height:0px;width:49.52%;margin:0px -10000px 0px 0%;}#u5242-4{z-index:22;min-height:41px;background-color:transparent;line-height:39px;text-align:center;color:#FFFFFF;text-transform:uppercase;font-size:14px;font-family:roboto, sans-serif;font-weight:300;position:relative;margin-right:-10000px;width:100%;}#u5241-4.MuseLinkActive,#u5242-4:hover{padding-top:0px;padding-bottom:0px;min-height:41px;width:100%;margin:0px -10000px 0px 0%;}#u5241-4.MuseLinkActive p,#u5242-4:hover p{color:#1D1D1B;visibility:inherit;}#u5012{z-index:2;background-color:transparent;margin-top:61px;position:relative;width:20.2%;}#u5154-10{z-index:6;min-height:300px;background-color:transparent;text-align:left;color:#FFFFFF;margin-top:39px;position:relative;width:51.36%;margin-left:0.55%;}#u5154-2,#u5154-3{font-size:30px;line-height:36px;font-family:baskerville-display-pt, serif;font-weight:700;font-style:italic;}#u5154-5,#u5154-8{font-size:18px;line-height:22px;font-family:roboto, sans-serif;font-weight:400;}#u5017{z-index:4;background-color:transparent;-webkit-transform:matrix(0,-1,1,0,0,34);-ms-transform:matrix(0,-1,1,0,0,34);transform:matrix(0,-1,1,0,0,34);margin-top:67px;position:relative;width:3.7%;}#u5012_img,#u5017_img{width:100%;}.css_verticalspacer .verticalspacer{height:calc(100vh - 886px);}#u5444{z-index:26;min-height:40px;padding-bottom:27px;}#u5444_align_to_page{margin-left:auto;margin-right:auto;position:relative;}#u3961-4{z-index:27;min-height:12px;position:relative;margin-right:-10000px;margin-top:28px;width:66.78%;left:2.09%;}.js body{visibility:hidden;}.js body.initialized{visibility:visible;}#u5444-bw{z-index:26;min-height:40px;margin-top:-5px;}.html{background:#FFFFFF url("../images/fundacion_antonio_rivera_02_gradient.jpg?crc=279087077") no-repeat center center fixed;background-size:cover;}body{position:relative;min-width:320px;}.verticalspacer{min-height:1px;}
+.version.don_antonio_rivera_venegas_foundation {
+    color: #000013;
+    background-color: #5A4067;
+}
+
+#muse_css_mq {
+    background-color: #FFFFFF;
+}
+
+#page {
+    z-index: 1;
+    min-height: 500px;
+    background-image: none;
+    border-width: 0px;
+    border-color: #000000;
+    background-color: transparent;
+    width: 100%;
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#pu3997 {
+    z-index: 31;
+    height: 0px;
+    padding-bottom: 108px;
+    margin-right: -10000px;
+    width: 100%;
+}
+
+#u3997 {
+    z-index: 31;
+    height: 108px;
+    position: fixed;
+    top: 0px;
+}
+
+#u3997-bw {
+    z-index: 31;
+}
+
+#u3993 {
+    position: relative;
+    left: -50%;
+    margin-left: 67.34507042253523px;
+    width: 100%;
+    max-width: 135px;
+}
+
+#u8400 {
+    z-index: 33;
+    width: 97.04%;
+}
+
+#u3993-wrapper {
+    position: fixed;
+    top: 20px;
+    z-index: 32;
+    left: 50%;
+    margin-left: -460px;
+    width: 14.07%;
+    max-width: 135px;
+}
+
+#u3995-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 67.5px;
+    width: 100%;
+    max-width: 135px;
+}
+
+#u3995-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 135px;
+    margin: 0px 0px 0px 68px;
+}
+
+#u3995-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 34;
+    left: 50%;
+    margin-left: -228px;
+    width: 14.07%;
+    max-width: 135px;
+}
+
+#u3999-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 67.5px;
+    width: 100%;
+    max-width: 135px;
+}
+
+#u3995-4.MuseLinkActive,
+#u3999-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 135px;
+    margin: 0px 0px 0px 68px;
+}
+
+#u3999-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 135px;
+    margin: 0px 0px 0px 68px;
+}
+
+#u3999-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 38;
+    left: 50%;
+    margin-left: -72px;
+    width: 14.07%;
+    max-width: 135px;
+}
+
+#u3998-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 94px;
+    width: 100%;
+    max-width: 188px;
+}
+
+#u3998-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 188px;
+    margin: 0px 0px 0px 94px;
+}
+
+#u3998-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 188px;
+    margin: 0px 0px 0px 94px;
+}
+
+#u3998-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 42;
+    left: 50%;
+    margin-left: 89px;
+    width: 19.59%;
+    max-width: 188px;
+}
+
+#u3992-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 32px;
+    width: 100%;
+    max-width: 64px;
+}
+
+#u3992-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u3992-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u3992-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 46;
+    left: 50%;
+    margin-left: 295px;
+    width: 6.67%;
+    max-width: 64px;
+}
+
+#u3996-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 38.5px;
+    width: 100%;
+    max-width: 77px;
+}
+
+#u3996-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 77px;
+    margin: 0px 0px 0px 39px;
+}
+
+#u3996-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 77px;
+    margin: 0px 0px 0px 39px;
+}
+
+#u3996-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 50;
+    left: 50%;
+    margin-left: 382px;
+    width: 8.03%;
+    max-width: 77px;
+}
+
+#u6403-4 {
+    min-height: 14px;
+    position: relative;
+    left: -50%;
+    margin-left: 32px;
+    width: 100%;
+    max-width: 64px;
+}
+
+#u6403-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 14px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u6403-4-wrapper {
+    position: fixed;
+    top: 20px;
+    z-index: 54;
+    left: 50%;
+    margin-left: 295px;
+    width: 6.67%;
+    max-width: 64px;
+}
+
+#u6404-4 {
+    min-height: 14px;
+    position: relative;
+    left: -50%;
+    margin-left: 32px;
+    width: 100%;
+    max-width: 64px;
+}
+
+#u6403-4.MuseLinkActive,
+#u6404-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 14px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u6404-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 14px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u6404-4-wrapper {
+    position: fixed;
+    top: 20px;
+    z-index: 58;
+    left: 50%;
+    margin-left: 389px;
+    width: 6.67%;
+    max-width: 64px;
+}
+
+#ppu5239 {
+    z-index: 0;
+    padding-bottom: 0px;
+    margin-right: -10000px;
+    margin-top: 108px;
+    width: 95.94%;
+    margin-left: 2.09%;
+}
+
+#pu5239 {
+    z-index: 16;
+    width: 100%;
+}
+
+#u5239 {
+    z-index: 16;
+    background-color: #616160;
+    position: relative;
+    margin-right: -10000px;
+    width: 49.52%;
+}
+
+#u5241-4 {
+    z-index: 18;
+    min-height: 41px;
+    background-color: transparent;
+    line-height: 39px;
+    text-align: center;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-family: roboto, sans-serif;
+    font-weight: 300;
+    position: relative;
+    margin-right: -10000px;
+    width: 100%;
+}
+
+#u5240 {
+    z-index: 17;
+    background-color: #616160;
+    position: relative;
+    margin-right: -10000px;
+    width: 49.52%;
+    left: 50.49%;
+}
+
+#u5239.MuseLinkActive,
+#u5240:hover {
+    background-color: #E6C35A;
+    min-height: 0px;
+    width: 49.52%;
+    margin: 0px -10000px 0px 0%;
+}
+
+#u5242-4 {
+    z-index: 22;
+    min-height: 41px;
+    background-color: transparent;
+    line-height: 39px;
+    text-align: center;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-family: roboto, sans-serif;
+    font-weight: 300;
+    position: relative;
+    margin-right: -10000px;
+    width: 100%;
+}
+
+#u5241-4.MuseLinkActive,
+#u5242-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 41px;
+    width: 100%;
+    margin: 0px -10000px 0px 0%;
+}
+
+#u5241-4.MuseLinkActive p,
+#u5242-4:hover p {
+    color: #1D1D1B;
+    visibility: inherit;
+}
+
+#u5012 {
+    z-index: 2;
+    background-color: transparent;
+    margin-top: 61px;
+    position: relative;
+    width: 20.2%;
+}
+
+#u5154-10 {
+    z-index: 6;
+    min-height: 300px;
+    background-color: transparent;
+    text-align: left;
+    color: #FFFFFF;
+    margin-top: 39px;
+    position: relative;
+    width: 51.36%;
+    margin-left: 0.55%;
+}
+
+#u5154-2,
+#u5154-3 {
+    font-size: 30px;
+    line-height: 36px;
+    font-family: baskerville-display-pt, serif;
+    font-weight: 700;
+    font-style: italic;
+}
+
+#u5154-5,
+#u5154-8 {
+    font-size: 18px;
+    line-height: 22px;
+    font-family: roboto, sans-serif;
+    font-weight: 400;
+}
+
+#u5017 {
+    z-index: 4;
+    background-color: transparent;
+    -webkit-transform: matrix(0, -1, 1, 0, 0, 34);
+    -ms-transform: matrix(0, -1, 1, 0, 0, 34);
+    transform: matrix(0, -1, 1, 0, 0, 34);
+    margin-top: 67px;
+    position: relative;
+    width: 3.7%;
+}
+
+#u5012_img,
+#u5017_img {
+    width: 100%;
+}
+
+.css_verticalspacer .verticalspacer {
+    height: calc(100vh - 886px);
+}
+
+#u5444 {
+    z-index: 26;
+    min-height: 40px;
+    padding-bottom: 27px;
+}
+
+#u5444_align_to_page {
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+}
+
+#u3961-4 {
+    z-index: 27;
+    min-height: 12px;
+    position: relative;
+    margin-right: -10000px;
+    margin-top: 28px;
+    width: 66.78%;
+    left: 2.09%;
+}
+
+.js body {
+    visibility: hidden;
+}
+
+.js body.initialized {
+    visibility: visible;
+}
+
+#u5444-bw {
+    z-index: 26;
+    min-height: 40px;
+    margin-top: -5px;
+}
+
+.html {
+    background: #FFFFFF url("../images/fundacion_antonio_rivera_02_gradient.jpg?crc=279087077") no-repeat center center fixed;
+    background-size: cover;
+}
+
+body {
+    position: relative;
+    min-width: 320px;
+}
+
+.verticalspacer {
+    min-height: 1px;
+}
