--- a/casa/css/quienes-somos.css
+++ b/casa/css/quienes-somos.css
@@ -1,1 +1,445 @@
-.version.quienes_somos{color:#00000C;background-color:#8E36B0;}#muse_css_mq{background-color:#FFFFFF;}#page{z-index:1;min-height:500px;background-image:none;border-width:0px;border-color:#000000;background-color:transparent;width:100%;max-width:960px;margin-left:auto;margin-right:auto;}#pu95{z-index:24;height:0px;padding-bottom:108px;margin-right:-10000px;width:100%;}#u95{z-index:24;height:108px;position:fixed;top:0px;}#u95-bw{z-index:24;}#u101{position:relative;left:-50%;margin-left:67.34507042253523px;width:100%;max-width:135px;}#u8393{z-index:26;width:97.04%;}#u101-wrapper{position:fixed;top:20px;z-index:25;left:50%;margin-left:-460px;width:14.07%;max-width:135px;}#u117-4{min-height:19px;position:relative;left:-50%;margin-left:67.49999999999999px;width:100%;max-width:135px;}#u117-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:135px;margin:0px 0px 0px 67px;}#u117-4-wrapper{position:fixed;top:57px;z-index:27;left:50%;margin-left:-242px;width:14.07%;max-width:135px;}#u122-4{min-height:19px;position:relative;left:-50%;margin-left:67.49999999999997px;width:100%;max-width:135px;}#u117-4.MuseLinkActive,#u122-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:135px;margin:0px 0px 0px 67px;}#u122-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:135px;margin:0px 0px 0px 67px;}#u122-4-wrapper{position:fixed;top:57px;z-index:31;left:50%;margin-left:-83px;width:14.07%;max-width:135px;}#u125-4{min-height:19px;position:relative;left:-50%;margin-left:100px;width:100%;max-width:200px;}#u125-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:200px;margin:0px 0px 0px 100px;}#u125-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:200px;margin:0px 0px 0px 100px;}#u125-4-wrapper{position:fixed;top:57px;z-index:35;left:50%;margin-left:77px;width:20.84%;max-width:200px;}#u128-4{min-height:19px;position:relative;left:-50%;margin-left:32px;width:100%;max-width:64px;}#u128-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u128-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u128-4-wrapper{position:fixed;top:57px;z-index:39;left:50%;margin-left:295px;width:6.67%;max-width:64px;}#u6397-4{min-height:14px;position:relative;left:-50%;margin-left:32px;width:100%;max-width:64px;}#u6397-4:hover{padding-top:0px;padding-bottom:0px;min-height:14px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u6397-4-wrapper{position:fixed;top:20px;z-index:43;left:50%;margin-left:295px;width:6.67%;max-width:64px;}#u6400-4{min-height:14px;position:relative;left:-50%;margin-left:32px;width:100%;max-width:64px;}#u6397-4.MuseLinkActive,#u6400-4:hover{padding-top:0px;padding-bottom:0px;min-height:14px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u6400-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:14px;width:100%;max-width:64px;margin:0px 0px 0px 32px;}#u6400-4-wrapper{position:fixed;top:20px;z-index:47;left:50%;margin-left:389px;width:6.67%;max-width:64px;}#u131-4{min-height:19px;position:relative;left:-50%;margin-left:38.5px;width:100%;max-width:77px;}#u131-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:77px;margin:0px 0px 0px 39px;}#u131-4.MuseLinkActive{padding-top:0px;padding-bottom:0px;min-height:19px;width:100%;max-width:77px;margin:0px 0px 0px 39px;}#u131-4-wrapper{position:fixed;top:57px;z-index:51;left:50%;margin-left:382px;width:8.03%;max-width:77px;}#ppu976{z-index:0;padding-bottom:0px;margin-right:-10000px;margin-top:108px;width:95.84%;margin-left:2.09%;}#pu976{z-index:3;width:100%;}#u976{z-index:3;background-color:#4485C2;position:relative;margin-right:-10000px;width:49.57%;}#u987-4{z-index:4;min-height:41px;background-color:transparent;line-height:36px;text-align:center;color:#FFFFFF;font-family:roboto, sans-serif;font-weight:300;position:relative;margin-right:-10000px;width:99.79%;}#u3726{z-index:2;background-color:#4485C2;padding-bottom:1px;position:relative;margin-right:-10000px;width:49.57%;left:50.44%;}#u976:hover,#u3726:hover{background-color:#1F4699;min-height:0px;width:49.57%;margin:0px -10000px 0px 0%;}#u990-4{z-index:8;min-height:40px;background-color:transparent;line-height:36px;text-align:center;color:#FFFFFF;font-family:roboto, sans-serif;font-weight:300;position:relative;margin-right:-10000px;width:100%;}#u1063-7{z-index:12;min-height:390px;background-color:transparent;line-height:31px;text-align:left;color:#FFFFFF;font-size:26px;font-family:baskerville-display-pt, serif;font-weight:700;font-style:italic;margin-top:79px;position:relative;width:51.85%;margin-left:48.16%;}.css_verticalspacer .verticalspacer{height:calc(100vh - 679px);}#u244{z-index:19;min-height:40px;padding-bottom:27px;}#u244_align_to_page{margin-left:auto;margin-right:auto;position:relative;}#u250-4{z-index:20;min-height:12px;position:relative;margin-right:-10000px;margin-top:28px;width:66.78%;left:2.09%;}.js body{visibility:hidden;}.js body.initialized{visibility:visible;}#u244-bw{z-index:19;min-height:40px;margin-top:-5px;}.html{background:#FFFFFF url("../images/quienes_somos.jpg?crc=356315640") no-repeat center top fixed;background-size:cover;}body{position:relative;min-width:320px;}.verticalspacer{min-height:1px;}
+.version.quienes_somos {
+    color: #00000C;
+    background-color: #8E36B0;
+}
+
+#muse_css_mq {
+    background-color: #FFFFFF;
+}
+
+#page {
+    z-index: 1;
+    min-height: 500px;
+    background-image: none;
+    border-width: 0px;
+    border-color: #000000;
+    background-color: transparent;
+    width: 100%;
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#pu95 {
+    z-index: 24;
+    height: 0px;
+    padding-bottom: 108px;
+    margin-right: -10000px;
+    width: 100%;
+}
+
+#u95 {
+    z-index: 24;
+    height: 108px;
+    position: fixed;
+    top: 0px;
+}
+
+#u95-bw {
+    z-index: 24;
+}
+
+#u101 {
+    position: relative;
+    left: -50%;
+    margin-left: 67.34507042253523px;
+    width: 100%;
+    max-width: 135px;
+}
+
+#u8393 {
+    z-index: 26;
+    width: 97.04%;
+}
+
+#u101-wrapper {
+    position: fixed;
+    top: 20px;
+    z-index: 25;
+    left: 50%;
+    margin-left: -460px;
+    width: 14.07%;
+    max-width: 135px;
+}
+
+#u117-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 67.49999999999999px;
+    width: 100%;
+    max-width: 135px;
+}
+
+#u117-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 135px;
+    margin: 0px 0px 0px 67px;
+}
+
+#u117-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 27;
+    left: 50%;
+    margin-left: -242px;
+    width: 14.07%;
+    max-width: 135px;
+}
+
+#u122-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 67.49999999999997px;
+    width: 100%;
+    max-width: 135px;
+}
+
+#u117-4.MuseLinkActive,
+#u122-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 135px;
+    margin: 0px 0px 0px 67px;
+}
+
+#u122-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 135px;
+    margin: 0px 0px 0px 67px;
+}
+
+#u122-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 31;
+    left: 50%;
+    margin-left: -83px;
+    width: 14.07%;
+    max-width: 135px;
+}
+
+#u125-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 100px;
+    width: 100%;
+    max-width: 200px;
+}
+
+#u125-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 200px;
+    margin: 0px 0px 0px 100px;
+}
+
+#u125-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 200px;
+    margin: 0px 0px 0px 100px;
+}
+
+#u125-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 35;
+    left: 50%;
+    margin-left: 77px;
+    width: 20.84%;
+    max-width: 200px;
+}
+
+#u128-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 32px;
+    width: 100%;
+    max-width: 64px;
+}
+
+#u128-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u128-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u128-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 39;
+    left: 50%;
+    margin-left: 295px;
+    width: 6.67%;
+    max-width: 64px;
+}
+
+#u6397-4 {
+    min-height: 14px;
+    position: relative;
+    left: -50%;
+    margin-left: 32px;
+    width: 100%;
+    max-width: 64px;
+}
+
+#u6397-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 14px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u6397-4-wrapper {
+    position: fixed;
+    top: 20px;
+    z-index: 43;
+    left: 50%;
+    margin-left: 295px;
+    width: 6.67%;
+    max-width: 64px;
+}
+
+#u6400-4 {
+    min-height: 14px;
+    position: relative;
+    left: -50%;
+    margin-left: 32px;
+    width: 100%;
+    max-width: 64px;
+}
+
+#u6397-4.MuseLinkActive,
+#u6400-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 14px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u6400-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 14px;
+    width: 100%;
+    max-width: 64px;
+    margin: 0px 0px 0px 32px;
+}
+
+#u6400-4-wrapper {
+    position: fixed;
+    top: 20px;
+    z-index: 47;
+    left: 50%;
+    margin-left: 389px;
+    width: 6.67%;
+    max-width: 64px;
+}
+
+#u131-4 {
+    min-height: 19px;
+    position: relative;
+    left: -50%;
+    margin-left: 38.5px;
+    width: 100%;
+    max-width: 77px;
+}
+
+#u131-4:hover {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 77px;
+    margin: 0px 0px 0px 39px;
+}
+
+#u131-4.MuseLinkActive {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    min-height: 19px;
+    width: 100%;
+    max-width: 77px;
+    margin: 0px 0px 0px 39px;
+}
+
+#u131-4-wrapper {
+    position: fixed;
+    top: 57px;
+    z-index: 51;
+    left: 50%;
+    margin-left: 297px;
+    width: 8.03%;
+    max-width: 77px;
+}
+
+#ppu976 {
+    z-index: 0;
+    padding-bottom: 0px;
+    margin-right: -10000px;
+    margin-top: 108px;
+    width: 95.84%;
+    margin-left: 2.09%;
+}
+
+#pu976 {
+    z-index: 3;
+    width: 100%;
+}
+
+#u976 {
+    z-index: 3;
+    background-color: #4485C2;
+    position: relative;
+    margin-right: -10000px;
+    width: 49.57%;
+}
+
+#u987-4 {
+    z-index: 4;
+    min-height: 41px;
+    background-color: transparent;
+    line-height: 36px;
+    text-align: center;
+    color: #FFFFFF;
+    font-family: roboto, sans-serif;
+    font-weight: 300;
+    position: relative;
+    margin-right: -10000px;
+    width: 99.79%;
+}
+
+#u3726 {
+    z-index: 2;
+    background-color: #4485C2;
+    padding-bottom: 1px;
+    position: relative;
+    margin-right: -10000px;
+    width: 49.57%;
+    left: 50.44%;
+}
+
+#u976:hover,
+#u3726:hover {
+    background-color: #1F4699;
+    min-height: 0px;
+    width: 49.57%;
+    margin: 0px -10000px 0px 0%;
+}
+
+#u990-4 {
+    z-index: 8;
+    min-height: 40px;
+    background-color: transparent;
+    line-height: 36px;
+    text-align: center;
+    color: #FFFFFF;
+    font-family: roboto, sans-serif;
+    font-weight: 300;
+    position: relative;
+    margin-right: -10000px;
+    width: 100%;
+}
+
+#u1063-7 {
+    z-index: 12;
+    min-height: 390px;
+    background-color: transparent;
+    line-height: 31px;
+    text-align: left;
+    color: #FFFFFF;
+    font-size: 26px;
+    font-family: baskerville-display-pt, serif;
+    font-weight: 700;
+    font-style: italic;
+    margin-top: 79px;
+    position: relative;
+    width: 51.85%;
+    margin-left: 48.16%;
+}
+
+.css_verticalspacer .verticalspacer {
+    height: calc(100vh - 679px);
+}
+
+#u244 {
+    z-index: 19;
+    min-height: 40px;
+    padding-bottom: 27px;
+}
+
+#u244_align_to_page {
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+}
+
+#u250-4 {
+    z-index: 20;
+    min-height: 12px;
+    position: relative;
+    margin-right: -10000px;
+    margin-top: 28px;
+    width: 66.78%;
+    left: 2.09%;
+}
+
+.js body {
+    visibility: hidden;
+}
+
+.js body.initialized {
+    visibility: visible;
+}
+
+#u244-bw {
+    z-index: 19;
+    min-height: 40px;
+    margin-top: -5px;
+}
+
+.html {
+    background: #FFFFFF url("../images/quienes_somos.jpg?crc=356315640") no-repeat center top fixed;
+    background-size: cover;
+}
+
+body {
+    position: relative;
+    min-width: 320px;
+}
+
+.verticalspacer {
+    min-height: 1px;
+}
